--- a/thesis.tex
+++ b/thesis.tex
@@ -32,9 +32,9 @@
 \setcounter{page}{0}
 \pagenumbering{arabic}
 %%=========================================
-\subfile{chapter01}
-\subfile{chapter02}
-\subfile{chapter0n}
+\subfile{Chapters/chapter01}
+\subfile{Chapters/chapter02}
+\subfile{Chapters/chapter0n}
 % Include more chapters as required.
 %%=========================================
 \bibliographystyle{apa}
@@ -42,7 +42,7 @@
 \bibliography{refs}  
 \blankpage
 \appendix
-\subfile{appendix-a}
+\subfile{Appendices/appendix-a}
 % Include more appendices as required.
 %%=========================================
 
