Clean up some more

--- a/thesis.tex
+++ b/thesis.tex
@@ -15,12 +15,12 @@
 
 %%===================================
 \begin{document}
-\subfile{front} % This is the titlepage
+\subfile{Front/front} % This is the titlepage
 \pagenumbering{roman}
 \setcounter{page}{2}
-\subfile{quote}
-\subfile{abstract}
-\subfile{acknowledgment}
+\subfile{Front/quote}
+\subfile{Front/abstract}
+\subfile{Front/acknowledgment}
 \tableofcontents
 \listoffigures
 \blankpage
@@ -28,7 +28,7 @@
 \blankpage
 \listoflistings
 \blankpage
-\subfile{acronyms}
+\subfile{Front/acronyms}
 \setcounter{page}{0}
 \pagenumbering{arabic}
 %%=========================================
