Fix problems with subfiles when compiling individual chapters

--- a/Front/front.tex
+++ b/Front/front.tex
@@ -1,10 +1,10 @@
 % !TEX encoding = UTF-8 Unicode
-%!TEX root = thesis.tex
+%!TEX root = ../Main/thesis.tex
 % !TEX spellcheck = en-US
 
 %This is the Titlepage
 %%=========================================
-\documentclass[thesis.tex]{subfiles}
+\documentclass[../Main/thesis.tex]{subfiles}
 \begin{document}
 
 %\maketitle
@@ -14,7 +14,7 @@
 \begin{titlepage}
 \begin{center}
 \textsc{\Huge University of Bergen}\\[0.4cm]
-\includegraphics[width=8cm]{fig/uib} \\[0.5cm]
+\includegraphics[width=8cm]{../fig/uib} \\[0.5cm]
 %\paragraph*{}
 
 \large Department of Information Science and Media Studies\\[0.7cm]
