--- a/Front/quote.tex
+++ b/Front/quote.tex
@@ -1,8 +1,8 @@
 % !TEX encoding = UTF-8 Unicode
-%!TEX root = thesis.tex
+%!TEX root = ../Main/thesis.tex
 % !TEX spellcheck = en-US
 %%=========================================
-\documentclass[thesis.tex]{subfiles}
+\documentclass[../Main/thesis.tex]{subfiles}
 \begin{document}
 \chapter*{}
 \null\vfill
