Use a4 paper size and add some useful packages

--- a/Main/thesis.tex
+++ b/Main/thesis.tex
@@ -6,7 +6,7 @@
 % A line starting with % is a comment. In some cases, I have included a command preceded by a %. You may activate the command by removing the %.
 
 %%===================================
-\documentclass[12pt]{report}
+\documentclass[12pt, a4paper]{report}
 \usepackage{../uibstyle}
 %%===================================
 
@@ -34,7 +34,8 @@
 \subfile{../Chapters/chapter0n}
 % Include more chapters as required.
 %%=========================================
-\bibliographystyle{apa}
+\renewcommand{\bibname}{References}
+\bibliographystyle{chicago}
 \addcontentsline{toc}{chapter}{\bibname}
 \bibliography{../refs}  
 \blankpage
