--- a/uibstyle.sty
+++ b/uibstyle.sty
@@ -1,4 +1,5 @@
 \usepackage[utf8]{inputenc} % This defines the font-encoding you prefer to use
+\usepackage[english]{babel}
 \usepackage{fourier}
 \pagestyle{headings}
 \usepackage{marvosym}
@@ -8,10 +9,16 @@
 \usepackage{amsmath}
 \usepackage{booktabs}
 \usepackage{url}
-\usepackage[longnamesfirst]{natbib}
+\usepackage{todonotes}
+\usepackage[bottom]{footmisc}
+\usepackage[compatibility=false]{caption}
+\usepackage{subcaption}
+\usepackage{pdfpages}
+\usepackage{subfiles}
+\usepackage{natbib}
 %\usepackage[numbers]{natbib} % Use this command if you want to refer to the literature by numbers, e.g., [1]
 \usepackage{setspace}
-\linespread{1.2} %Changed from 1.5
+\linespread{1.3}
 
 \newenvironment{remark}{\par\mbox{}\par\noindent{\bfseries \emph{Remark}\/}:\normalfont}{\par}
 \newenvironment{defin}{\par\mbox{}\par\noindent\bfseries \emph{\Pointinghand\ }\normalfont}{\par}
@@ -20,20 +27,25 @@
 linkcolor=black, citecolor=black, urlcolor=blue, breaklinks]{hyperref}
 \pdfcompresslevel=9
 
-\usepackage[cache=false]{minted}
+%NB! To use minted latex must be invoked with the 'shell-escape' flag
+\usepackage[cache=false, chapter]{minted}
 \usemintedstyle{friendly}
 \AtBeginEnvironment{minted}{%
 	\renewcommand{\fcolorbox}[4][]{#4}}
 
 \renewcommand\listoflistingscaption{List of source codes}
-
-\usepackage{subfiles}
-
+\captionsetup[lstlisting]{numberbychapter=true}
 
 \setlength{\parindent}{0.0in}
 \setlength{\parskip}{.5em}
 
 \newcommand{\blankpage}{\newpage{}\thispagestyle{empty}\mbox{}\newpage{}}
+
+\hypersetup{
+       pdfauthor={Author},
+       pdftitle={Title},
+       pdfkeywords={Keywords}
+}
 
 
 %HEADERS
