--- a/Front/front.tex
+++ b/Front/front.tex
@@ -1,13 +1,9 @@
-% !TEX encoding = UTF-8 Unicode
-%!TEX root = ../Main/thesis.tex
 % !TEX spellcheck = en-US
 
 %This is the Titlepage
 %%=========================================
 \documentclass[../Main/thesis.tex]{subfiles}
 \begin{document}
-
-%\maketitle
 
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
@@ -20,7 +16,7 @@
 \large Department of Information Science and Media Studies\\[0.7cm]
 \textsc{\huge Masters Thesis}\\[0.4cm]
 \HRule \\[0.4cm]
-{ \huge \bfseries En lang tittel er grei å splitte  \\ sånn ca på midten}\\[0.5cm]
+{ \huge \bfseries A long title could be split \\into two or more lines}\\[0.5cm]
 \HRule \\[1.0cm]
 
 \emph{Author: Ola Nordmann}\\
