Rename stuff to be more consistent

--- a/Front/front.tex
+++ b/Front/front.tex
@@ -10,7 +10,7 @@
 \begin{titlepage}
 \begin{center}
 \textsc{\Huge University of Bergen}\\[0.4cm]
-\includegraphics[width=8cm]{../fig/uib} \\[0.5cm]
+\includegraphics[width=8cm]{../Figures/uib} \\[0.5cm]
 %\paragraph*{}
 
 \large Department of Information Science and Media Studies\\[0.7cm]
