--- a/Main/thesis.tex
+++ b/Main/thesis.tex
@@ -36,7 +36,7 @@
 \renewcommand{\bibname}{References}
 \bibliographystyle{chicago}
 \addcontentsline{toc}{chapter}{\bibname}
-\bibliography{../refs}  
+\bibliography{../references}  
 \blankpage
 \appendix
 \subfile{../Appendices/appendix-a}
