Add warning about Overleaf issue in uibstyle.sty

--- a/uibstyle.sty
+++ b/uibstyle.sty
@@ -28,6 +28,7 @@ linkcolor=black, citecolor=black, urlcolor=blue, breaklinks]{hyperref}
 \pdfcompresslevel=9
 
 %NB! To use minted latex must be invoked with the 'shell-escape' flag
+%NB! If you are using Overleaf see Readme for instructions on how to resolve issues with Minted in Overleaf
 \usepackage[cache=false, chapter]{minted}
 \usemintedstyle{friendly}
 \AtBeginEnvironment{minted}{%
