--- a/Front/front.tex
+++ b/Front/front.tex
@@ -14,7 +14,7 @@
 %\paragraph*{}
 
 \large Department of Information Science and Media Studies\\[0.7cm]
-\textsc{\huge Masters Thesis}\\[0.4cm]
+\textsc{\huge Master's Thesis}\\[0.4cm]
 \HRule \\[0.4cm]
 { \huge \bfseries A long title could be split \\into two or more lines}\\[0.5cm]
 \HRule \\[1.0cm]
